# jairocloud-groups-manager

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.vite  README.md  commitlint.config.ts  compose.prod.yaml  compose.yaml  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  supervisord.web.conf  supervisord.worker.conf  uwsgi.ini
.devcontainer/: deps.sh  dev.compose.yaml  devcontainer.json  setup.sh  setup_commands.sh
.github/workflows/: ci.yml
.husky/: pre-commit
app/: app.vue
app/components/: EmbeddedDs.vue
app/pages/: index.vue  login.vue
configs/: app.config.ts  server.config.toml
docs/: README.md  content.config.ts  nuxt.config.ts  package.json
docs/app/: app.vue
docs/app/assets/css/: main.css
docs/app/components/: AppHeader.vue  RepositoryAdminView.vue  SystemAdminOnly.vue
docs/app/composables/: useNavigation.ts  useSystemAdminOnly.ts
docs/app/layouts/: default.vue  docs.vue
docs/app/pages/: [...slug].vue  index.vue
docs/content/: index.md
docs/content/01.detailed/: .navigation.yml  index.md
docs/content/01.detailed/02.foundation/: .navigation.yml  01.app.md  02.config.md  03.const.md  04.factory.md  05.ext.md  06.celery-app.md  07.exc.md  08.logger.md  app.md  auth.md  celery-app.md  config.md  const.md  datastore.md  exc.md  ext.md  factory.md  logger.md  messages.md  signals.md
docs/content/01.detailed/03.entities/: .navigation.yml  01.auth.md  01.map-service.md  02.login-user.md  02.map-group.md  03.map-service.md  03.map_user.md  04.map-group.md  04.map_error.md  05.map-user.md  05.search-request.md  06.map-error.md  06.patch-request.md  07.auth.md  07.search-request.md  08.patch-request.md  08.repository-detail.md  09.bulk-request.md  09.group-detail.md  10.summaries.md  10.user-detail.md  11.bulk-request.md  11.repository-detail.md  12.group-detail.md  12.login-user.md  13.bulk.md  13.user-detail.md  (+3 more)
docs/content/02.api/: .navigation.yml  endpoints.md  index.md
docs/content/03.db/: .navigation.yml  01.service-settings.md  02.history.md  index.md
docs/content/05.manual/: .navigation.yml  index.md
docs/content/detailed/: 01.introduction.md
nginx/: Dockerfile  attribute-map.inc.xml  attribute-policy.inc.xml  cgidp-metadata.xml  shibboleth2.xml  supervisord.conf
nginx/conf.d/: api.dev.inc  api.inc  app.dev.inc  default.conf  shibboleth.inc
nginx/ssl/: README
server/: config.py  const.py  ext.py  factory.py  worker.py
server/client/: oauth.py  users.py
server/schema/: others.py
server/views/: auth.py  route.py  users.py
src/app/: app.config.ts  app.vue
src/app/components/: DevLoginForm.vue  EmbeddedDs.vue  NumberIndicator.vue  UseTerm.vue
src/app/composables/: cacheGroups.ts  errorHandling.ts  forms.ts  globalSearch.ts  groupCaches.ts  groups.ts  repositories.ts  useAuth.ts  useAuthStore.ts  useAvailableLocales.ts  useBulk.ts  useHistory.ts  useMenu.ts  useSticky.ts  useUserUpload.ts  users.ts
src/app/layouts/: default.vue  unauth.vue
src/app/middleware/: auth.global.ts
src/app/pages/: index.vue  login.vue
src/app/plugins/: auth-fetch-interceptor.ts
src/app/types/: bulks.ts  cacheGroups.ts  forms.ts  groupCaches.ts  groups.ts  history.ts  repositories.ts  search.ts  userUpload.ts  users.ts
src/app/utils/: index.ts  search.ts
src/contrib/: __init__.py  developers.py  dump.py  messages.py
src/server/: app.py  auth.py  celery.py  celery_app.py  config.py  const.py  datastore.py  exc.py  ext.py  factory.py  logger.py  signals.py
src/server/api/: auth.py  bulk.py  cache_groups.py  callback.py  group_caches.py  groups.py  helper.py  helpers.py  history.py  repositories.py  router.py  schema.py  schemas.py  search.py  users.py
src/server/cli/: app.py  base.py  db.py  token.py
src/server/clients/: auth.py  bulks.py  decoraters.py  groups.py  services.py  types.py  users.py  utils.py
src/server/db/: __init__.py  base.py  history.py  service_settings.py  utils.py
src/server/entities/: auth.py  bulk.py  bulk_request.py  cache.py  common.py  group.py  group_detail.py  history_detail.py  login_user.py  map_error.py  map_group.py  map_service.py  map_user.py  patch_request.py  repository.py  repository_detail.py  search_request.py  summaries.py  user_detail.py
src/server/messages/: __init__.py  base.py  error.py  info.py  warning.py
src/server/schemas/: map_group.py  map_service.py  map_user.py
src/server/services/: bulks.py  cache_groups.py  filter_options.py  group_caches.py  groups.py  history.py  history_table.py  permission.py  permissions.py  repositories.py  service_settings.py  token.py  users.py
tests/: .ruff.toml  helpers.py
tests/data/: map_bulk.json  map_error.json  map_group.json  map_group_update.json  map_service.json
tests/unit/: conftest.py  test_auth.py  test_ext.py
tests/unit/api/: test_auth.py  test_bulk.py  test_cache_groups.py  test_callback.py  test_group_caches.py  test_groups.py  test_helpers.py  test_history.py  test_repositories.py  test_router.py  test_users.py
tests/unit/cli/: test_db.py  test_token.py
tests/unit/clients/: test_auth.py  test_bulks.py  test_decoraters.py  test_groups.py  test_services.py  test_users.py  test_utils.py
tests/unit/db/: test_utils.py
tests/unit/entities/: test_map_user.py
tests/unit/schemas/: test_map_user.py
tests/unit/services/: test_bulk.py  test_cache_groups.py  test_filter_options.py  test_group_caches.py  test_groups.py  test_history.py  test_history_table.py  test_patch_operations.py  test_permissions.py  test_repositories.py  test_search_queries.py  test_service_settings.py  test_token.py  test_transformers.py  test_users.py  test_utils_affiliations.py  test_utils_patch_operations.py  test_utils_resolvers.py  test_utils_roles.py
(+126 files in other folders)
